syntax = "proto3";

package SuaiTeacherInfo;

option csharp_namespace = "Suai.Bot.TeacherInfo.Proto";

service TeacherInfoService
{
	rpc GetTeacherInfo (TeacherInfoRequest) returns (TeacherInfoReply);
}

message TeacherInfoRequest 
{
	string name = 1;
}

message TeacherInfoReply
{
	repeated TeacherInfo teachers = 1;
}

message TeacherInfo 
{
	string name = 1;
	string university = 2;
	string institute = 3;
	string department = 4;
	string phone = 5;
	string email = 6;
	string academicDegree = 7;
}